.kubernetes/base/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: therapist-app-backend
  labels:
    app: therapist-app-backend
    group: therapist-app-backend
spec:
  template:
    metadata:
      labels:
        app: therapist-app-backend
    spec:
      containers:
        - image: jonasblum/therapist-app-backend-main:latest
          imagePullPolicy: Always
          name: therapist-app-backend

  selector:
    matchLabels:
      app: therapist-app-backend
