.kubernetes/base/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: therapist-app-backend-ingress
spec:
  rules:
    - host: backend-therapist-app-main.jonas-blum.ch # Default host, overridden in overlays
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: therapist-app-backend-service
                port:
                  number: 80
